# yaserde

./: Cargo.toml  LICENSE  README.md
doc/: skip_serializing.md
examples/: Cargo.toml
examples/src/: bbigras_namespace.rs  boscop.rs  lib.rs  ln_dom.rs  svd.rs
yaserde/: Cargo.toml
yaserde/src/: ext.rs  lib.rs
yaserde/tests/: default.rs  deserializer.rs  enum.rs  errors.rs  flatten.rs  namespace.rs  option.rs  serializer.rs  skip.rs  skip_if.rs  types.rs
yaserde_derive/: Cargo.toml
yaserde_derive/src/: lib.rs
yaserde_derive/src/common/: attribute.rs  field.rs
yaserde_derive/src/de/: expand_enum.rs  expand_struct.rs  mod.rs
yaserde_derive/src/ser/: element.rs  expand_enum.rs  expand_struct.rs  implement_serializer.rs  mod.rs
