[package]
name = "yaserde-examples"
version = "0.9.3"
authors = ["Marc-Antoine Arnaud <maarnaud@media-io.com>"]
license = "MIT"
edition = "2018"
description = "Examples for YaSerDe project"
documentation = "https://docs.rs/yaserde"

[dependencies]
hifa_yaserde = {version = "0.9.3", path = "../yaserde", features = ["hifa_yaserde_derive"] }
