[package]
name = "hifa_yaserde"
version = "0.9.3"
authors = ["Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>", "hifa-lang"]
description = "Serialization and deserialization library"
keywords = ["Serialization", "Deserialization", "XML"]
license = "MIT"
repository = "https://github.com/hifa-lang/yaserde"
homepage = "https://github.com/hifa-lang/yaserde"
documentation = "https://docs.rs/hifa_lang_yaserde"
readme = "../README.md"
edition = "2018"

[dependencies]
hifa_yaserde_derive = { version = "0.9.3", path = "../yaserde_derive", optional = true }
xml-rs = "0.8.3"
log = "0.4"

[dev-dependencies]
env_logger = "0.11.0"
hifa_yaserde_derive = { version = "0.9.3", path = "../yaserde_derive" }

[badges]
travis-ci = { repository = "hifa-lang/yaserde" }
