[package]
name = "hifa_yaserde_derive"
version = "0.9.2"
authors = ["Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>", "hifa-lang"]
description = "Serialization and deserialization macros"
keywords = ["Serialization", "Deserialization"]
license = "MIT"
repository = "https://github.com/hifa-lang/yaserde"
homepage = "https://github.com/hifa-lang/yaserde"
documentation = "https://docs.rs/hifa_lang_yaserde"
readme = "../README.md"
edition = "2018"

[dependencies]
heck = "0.4.0"
syn = { version = "~1.0", features = ["visit", "extra-traits"] }
proc-macro2 = "~1.0"
quote = "~1.0"
xml-rs = "0.8.3"
log = "0.4"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "hifa-lang/yaserde" }
