[package]
name = "hifa_yaserde_derive"
version = "0.9.3"
authors = ["Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>", "hifa-lang"]
description = "Serialization and deserialization macros"
keywords = ["Serialization", "Deserialization"]
license = "MIT"
repository = "https://github.com/hifa-lang/yaserde"
homepage = "https://github.com/hifa-lang/yaserde"
documentation = "https://docs.rs/hifa_lang_yaserde"
readme = "../README.md"
edition = "2018"

[dependencies]
heck = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_tokenstream = "0.2"
syn = { version = "2", features = ["parsing", "visit", "extra-traits"] }
proc-macro2 = "1"
quote = "~1.0"
xml-rs = "0.8.3"
log = "0.4"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "hifa-lang/yaserde" }
